--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".SetupScreen3"></activity>
+        <activity android:name=".SetupScreen4"></activity>
+        <activity android:name=".SetupScreen3" />
         <activity android:name=".SetupScreen1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
