--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.wewilldevelopitlater.readability">
 
-
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
+    <uses-permisgision android:name="android.permission.BLUETOOTH_ADMIN" />
 
     <application
         android:allowBackup="true"
@@ -15,18 +14,19 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".MainActivity" />
-        <activity android:name=".FetchingActivity" />
-        <activity android:name=".ClassifierActivity" />
-        <activity android:name=".SetupScreen4" />
-        <activity android:name=".SetupScreen3" />
-        <activity android:name=".SetupScreen1">
+        <activity android:name=".OpenDocumentActivity"></activity>
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".FetchingActivity" />
+        <activity android:name=".ClassifierActivity" />
+        <activity android:name=".SetupScreen4" />
+        <activity android:name=".SetupScreen3" />
+        <activity android:name=".SetupScreen1" />
         <activity android:name=".SetupScreen2" />
     </application>
 
